src/main/java/com/example/demo/error/UnAuthorizedException.java
package com.example.demo.error;

public class UnAuthorizedException extends RuntimeException {
  public UnAuthorizedException(String message) {
    super(message);
  }
}
